# somos-mais-code-challenge

./: .gitignore  .pre-commit-config.yaml  boundingbox.py  pyproject.toml  tags.py
ApiClientes/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
ApiClientes/ApiClientes/: asgi.py  settings.py  urls.py  wsgi.py
ApiClientes/Caddy/: Caddyfile
ApiClientes/api_clientes/: __init__.py  apps.py  conftest.py  env_vars_repo.py  pagination.py  renderers.py  serializers.py  urls.py  views.py
ApiClientes/api_clientes/clients/: datarepo.py
ApiClientes/api_clientes/clients/client/: endpoints.py  expand_csv.py  get_users.py  phone_conversion.py
ApiClientes/api_clientes/clients/client/models/: queries.py  usermodels.py
ApiClientes/api_clientes/clients/client/tests/: conftest.py  test_datarepo.py  test_expand_csv.py  test_get_users.py  test_locations.py  test_phone_conversion.py
ApiClientes/api_clientes/clients/client/tests/mock/: load_mock_response.py
ApiClientes/api_clientes/clients/regions/: boundingbox.py  regions.py  tags.py
ApiClientes/api_clientes/clients/regions/definitions/: locations.py  regiontypes.py  values.py
ApiClientes/api_clientes/clients/regions/tests/: test_boundingbox.py  test_regions.py  test_tags.py
ApiClientes/api_clientes/tests/: conftest.py  test_api_get_users.py  test_api_get_users_by_region.py  test_api_main_route.py  test_flatten_pydantic.py
ApiClientes/api_clientes/utils/: flatten_pydantic.py  mock_os.py
client/: endpoints.py  exceptions.py  get_users.py  phone_conversion.py
regions/: boundingbox.py  regions.py  tags.py
(+12 files in other folders)
